@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.7.3
 
+  *) apr-1-config: Fix crosscompiling detection in apr-1-config. PR 66510
+     [Ruediger Pluem]
+
   *) configure: Add --enable-sysv-shm to use SysV shared memory (shmget) if
      available. [Ruediger Pluem]
 
